--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-	"name": "fabric",
-	"version": "0.0.1",
+	"name": "@shopkeepjs/draper",
+	"version": "0.0.10",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
-		"prepublishOnly": "npm run package",
+		"prepublish": "npm run package",
+		"publish": "npm publish --access public",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
@@ -14,7 +15,8 @@
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"build-storybook": "storybook build",
+    "gnc": "node cli/generateNewComponent.cjs"
 	},
 	"files": [
 		"dist",
@@ -37,33 +39,37 @@
 		"svelte": "^5.0.0"
 	},
 	"devDependencies": {
+		"@chromatic-com/storybook": "^3.2.2",
+		"@shopkeep/thread": "npm:@jsr/shopkeep__thread@^0.0.9",
+		"@storybook/addon-essentials": "^8.4.1",
+		"@storybook/addon-interactions": "^8.4.1",
+		"@storybook/addon-links": "^8.4.1",
+		"@storybook/addon-svelte-csf": "^5.0.0-next.10",
+		"@storybook/blocks": "^8.4.1",
+		"@storybook/svelte": "^8.4.1",
+		"@storybook/sveltekit": "^8.4.1",
+		"@storybook/test": "^8.4.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@testing-library/svelte": "^5.2.4",
 		"@types/eslint": "^9.6.0",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"jsdom": "^25.0.1",
+		"magic-string": "^0.30.12",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"publint": "^0.2.0",
+		"storybook": "^8.4.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.11",
-		"vitest": "^2.0.4",
-		"storybook": "^8.3.6",
-		"@storybook/svelte": "^8.3.6",
-		"@storybook/sveltekit": "^8.3.6",
-		"@storybook/blocks": "^8.3.6",
-		"@storybook/addon-svelte-csf": "^5.0.0-next.10",
-		"@storybook/addon-links": "^8.3.6",
-		"@storybook/addon-essentials": "^8.3.6",
-		"@chromatic-com/storybook": "^1.9.0",
-		"@storybook/test": "^8.3.6",
-		"@storybook/addon-interactions": "^8.3.6"
+		"vitest": "^2.0.4"
 	}
 }
