--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@shopkeepjs/draper",
-	"version": "0.0.10",
+	"name": "@shopkeepjs/tailor",
+	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
